--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -4,13 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.mbo.counter.home.HomeActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ProgressBar
+        style="?android:progressBarStyleHorizontal"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        style="?android:progressBarStyleHorizontal"
         android:progress="60"
         android:progressDrawable="@drawable/circle"
         app:layout_constraintBottom_toBottomOf="parent"
