--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,13 +4,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.mbo.counter.home.HomeActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
+    <ListView
+        android:id="@+id/counter_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--TODO : replace by real no counter icon-->
     <TextView
+        android:id="@+id/no_counter_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World from fragment home!"
+        android:layout_gravity="center"
+        android:drawableTop="@drawable/ic_counter"
+        android:text="@string/no_counters"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
