--- a/app/src/main/res/layout/add_edit_counter_fragment.xml
+++ b/app/src/main/res/layout/add_edit_counter_fragment.xml
@@ -10,24 +10,26 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/titleLayout"
+        android:id="@+id/name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/name_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title"/>
+            android:hint="@string/name"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/countLayout"
+        android:id="@+id/count_layout"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/titleLayout">
+        app:layout_constraintTop_toBottomOf="@id/name_layout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/count_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/count"/>
@@ -35,30 +37,31 @@
     </android.support.design.widget.TextInputLayout>
 
     <ImageView
-        android:id="@+id/decreaseImage"
+        android:id="@+id/decrease_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@id/countLayout"
-        app:layout_constraintEnd_toStartOf="@id/increaseImage"
+        app:layout_constraintBottom_toBottomOf="@id/count_layout"
+        app:layout_constraintEnd_toStartOf="@id/increase_image"
         app:srcCompat="@drawable/down_arrow"/>
 
     <ImageView
-        android:id="@+id/increaseImage"
+        android:id="@+id/increase_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@id/countLayout"
-        app:layout_constraintEnd_toEndOf="@id/titleLayout"
+        app:layout_constraintBottom_toBottomOf="@id/count_layout"
+        app:layout_constraintEnd_toEndOf="@id/name_layout"
         app:srcCompat="@drawable/up_arrow"/>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/noteLayout"
+        android:id="@+id/note_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/countLayout">
+        app:layout_constraintTop_toBottomOf="@id/count_layout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/note_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/notes"/>
@@ -67,12 +70,12 @@
 
     <Button
         android:layout_width="match_parent"
+        android:id="@+id/change_color_button"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:drawableEnd="@android:drawable/arrow_down_float"
-        android:drawableRight="@android:drawable/arrow_down_float"
         android:text="@string/change_color"
         android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/noteLayout"/>
+        app:layout_constraintTop_toBottomOf="@id/note_layout"/>
 
 </android.support.constraint.ConstraintLayout>
