--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/list_item_vertical_margin">
 
     <TextView
-        android:id="@+id/currentCount"
+        android:id="@+id/current_count_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
@@ -19,30 +19,45 @@
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rappel 1"
-        app:layout_constraintLeft_toLeftOf="@id/currentCount"
-        app:layout_constraintTop_toBottomOf="@id/currentCount"
+        app:layout_constraintLeft_toLeftOf="@id/current_count_text_view"
+        app:layout_constraintTop_toBottomOf="@id/current_count_text_view"
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/count"
+        android:id="@+id/count_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(10)"
-        app:layout_constraintLeft_toRightOf="@id/title"
-        app:layout_constraintTop_toBottomOf="@id/currentCount"
+        android:layout_marginStart="4dp"
+        app:layout_constraintLeft_toRightOf="@id/name_text_view"
+        app:layout_constraintTop_toBottomOf="@id/current_count_text_view"
         tools:ignore="HardcodedText"/>
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/counter_item_progress_bar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/circle_small"
+        android:rotation="-90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/progression_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="30%"
+        app:layout_constraintBottom_toBottomOf="@id/counter_item_progress_bar"
+        app:layout_constraintEnd_toEndOf="@id/counter_item_progress_bar"
+        app:layout_constraintStart_toStartOf="@id/counter_item_progress_bar"
+        app:layout_constraintTop_toTopOf="@id/counter_item_progress_bar"
+        tools:ignore="HardcodedText"/>
 
 </android.support.constraint.ConstraintLayout>
