refactor counter model class

--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -20,7 +20,7 @@
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/count_text_view"
+        android:id="@+id/counter_total_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
