--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/list_item_vertical_margin">
 
     <TextView
-        android:id="@+id/current_count_text_view"
+        android:id="@+id/count_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
@@ -23,18 +23,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rappel 1"
-        app:layout_constraintLeft_toLeftOf="@id/current_count_text_view"
-        app:layout_constraintTop_toBottomOf="@id/current_count_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/count_text_view"
+        app:layout_constraintTop_toBottomOf="@id/count_text_view"
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/count_text_view"
+        android:id="@+id/total_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(10)"
         android:layout_marginStart="4dp"
         app:layout_constraintLeft_toRightOf="@id/name_text_view"
-        app:layout_constraintTop_toBottomOf="@id/current_count_text_view"
+        app:layout_constraintTop_toBottomOf="@id/count_text_view"
         tools:ignore="HardcodedText"/>
 
     <ProgressBar
