--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -31,8 +31,8 @@
         android:id="@+id/total_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(10)"
         android:layout_marginStart="4dp"
+        android:text="(10)"
         app:layout_constraintLeft_toRightOf="@id/name_text_view"
         app:layout_constraintTop_toBottomOf="@id/count_text_view"
         tools:ignore="HardcodedText"/>
@@ -59,5 +59,16 @@
         app:layout_constraintStart_toStartOf="@id/counter_item_progress_bar"
         app:layout_constraintTop_toTopOf="@id/counter_item_progress_bar"
         tools:ignore="HardcodedText"/>
+
+    <ImageButton
+        android:id="@+id/delete_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/delete"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete"/>
 
 </android.support.constraint.ConstraintLayout>
