--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/action_edit"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
