--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -9,10 +9,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <ListView
+        android:id="@+id/statistics_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--TODO : replace by real no counter icon-->
     <TextView
+        android:id="@+id/no_statistics_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World from fragment Statistics"
+        android:layout_gravity="center"
+        android:drawableTop="@drawable/ic_counter"
+        android:text="@string/no_statistics"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
