--- a/app/src/main/res/drawable/progress_bar_circle.xml
+++ b/app/src/main/res/drawable/progress_bar_circle.xml
@@ -5,5 +5,5 @@
        android:innerRadius="100dp"
        android:thickness="8dp"
        android:useLevel="true">
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@android:color/holo_green_light"/>
 </shape>
