--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -20,7 +20,7 @@
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/counter_total_text_view"
+        android:id="@+id/counter_limit_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -45,9 +45,10 @@
             style="?android:progressBarStyleHorizontal"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:background="@drawable/progress_bar_background"
             android:progress="50"
-            android:progressDrawable="@drawable/circle"
-            android:rotation="-90"
+            android:progressDrawable="@drawable/progress_bar_circle"
+            android:rotation="90"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -64,6 +65,36 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText"/>
+
+        <Button
+            android:id="@+id/counter_decrease_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-1"
+            app:layout_constraintLeft_toLeftOf="@id/counter_progress_bar"
+            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
+            tools:ignore="HardcodedText"/>
+
+        <Button
+            android:id="@+id/counter_increase_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_green_light"
+            android:text="+1"
+            app:layout_constraintRight_toRightOf="@id/counter_progress_bar"
+            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
+            tools:ignore="HardcodedText"/>
+
+        <Button
+            android:id="@+id/counter_reset_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:text="Reset"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/counter_increase_button"
             tools:ignore="HardcodedText"/>
 
     </android.support.constraint.ConstraintLayout>
