--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -28,7 +28,7 @@
         tools:ignore="HardcodedText"/>
 
     <TextView
-        android:id="@+id/total_text_view"
+        android:id="@+id/limit_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
