--- a/app/src/main/res/drawable/progress_bar_circle.xml
+++ b/app/src/main/res/drawable/progress_bar_circle.xml
@@ -5,5 +5,10 @@
        android:innerRadius="100dp"
        android:thickness="8dp"
        android:useLevel="true">
-    <solid android:color="@android:color/holo_green_light"/>
+    <gradient
+        android:angle="0"
+        android:endColor="@android:color/holo_green_light"
+        android:startColor="@android:color/transparent"
+        android:type="sweep"
+        android:useLevel="false"/>
 </shape>
