--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -6,36 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/list_item_vertical_margin"
-    android:paddingLeft="@dimen/list_item_horizontal_margin"
-    android:paddingRight="@dimen/list_item_horizontal_margin"
-    android:paddingTop="@dimen/list_item_vertical_margin">
-
-    <TextView
-        android:id="@+id/count_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10"
-        android:textSize="40sp"
-        tools:ignore="HardcodedText"/>
-
-    <TextView
-        android:id="@+id/name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rappel 1"
-        app:layout_constraintLeft_toLeftOf="@id/count_text_view"
-        app:layout_constraintTop_toBottomOf="@id/count_text_view"
-        tools:ignore="HardcodedText"/>
-
-    <TextView
-        android:id="@+id/limit_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="(10)"
-        app:layout_constraintLeft_toRightOf="@id/name_text_view"
-        app:layout_constraintTop_toBottomOf="@id/count_text_view"
-        tools:ignore="HardcodedText"/>
+    android:background="@android:color/white"
+    android:paddingTop="@dimen/list_item_vertical_margin"
+    android:paddingStart="8dp">
 
     <ProgressBar
         android:id="@+id/counter_item_progress_bar"
@@ -46,8 +19,9 @@
         android:progressDrawable="@drawable/circle_small"
         android:rotation="-90"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry"/>
 
     <TextView
         android:id="@+id/progression_text_view"
@@ -60,18 +34,62 @@
         app:layout_constraintTop_toTopOf="@id/counter_item_progress_bar"
         tools:ignore="HardcodedText"/>
 
+    <TextView
+        android:id="@+id/name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rappel 1 (10)"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/counter_item_progress_bar"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="HardcodedText"/>
+
+    <TextView
+        android:id="@+id/count_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toRightOf="@id/counter_item_progress_bar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_text_view"
+        tools:ignore="HardcodedText"/>
+
     <ImageButton
-        android:id="@+id/delete_image_button"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:padding="10dp"
-        android:contentDescription="@string/delete"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/trash"/>
+        android:id="@+id/decrease_counter_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="@string/action_edit"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:src="@drawable/ic_minus"
+        android:tint="@color/lightslategray"
+        app:layout_constraintLeft_toRightOf="@id/counter_item_progress_bar"
+        app:layout_constraintTop_toBottomOf="@id/name_text_view"/>
+
+    <ImageButton
+        android:id="@+id/increase_counter_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="@string/action_edit"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:src="@drawable/ic_plus"
+        android:tint="@color/lightslategray"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_text_view"/>
+
+    <ImageView
+        android:id="@+id/edit_counter_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/action_edit"
+        android:src="@drawable/ic_three_dots"
+        android:tint="@color/lightgrey"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
