Handle popup menu in counter list UI

--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="@string/action_edit"
+        android:contentDescription="@string/edit"
         android:paddingEnd="20dp"
         android:paddingStart="20dp"
         android:src="@drawable/ic_minus"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="@string/action_edit"
+        android:contentDescription="@string/edit"
         android:paddingEnd="20dp"
         android:paddingStart="20dp"
         android:src="@drawable/ic_plus"
@@ -86,7 +86,7 @@
         android:id="@+id/edit_counter_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/action_edit"
+        android:contentDescription="@string/edit"
         android:src="@drawable/ic_three_dots"
         android:tint="@color/lightgrey"
         app:layout_constraintRight_toRightOf="parent"
