--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_red_light"
-            android:text="Reset"
+            android:text="@string/reset"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/counter_increase_button"
