--- a/app/src/main/res/menu/menu_counter.xml
+++ b/app/src/main/res/menu/menu_counter.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_menu_edit"
-        android:title="@string/action_edit"
+        android:title="@string/edit"
         app:showAsAction="always"/>
     <item
         android:id="@+id/action_statistics"
         android:icon="@drawable/ic_menu_statistics"
-        android:title="@string/action_edit"
+        android:title="@string/statistics"
         app:showAsAction="ifRoom"/>
 </menu>
