--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_three_dots"
-        android:title="@string/action_edit"
+        android:title="@string/edit"
         app:showAsAction="always"/>
 </menu>
