--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -15,6 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My counter"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:ignore="HardcodedText"/>
@@ -25,78 +27,66 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Objective : 30"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/counter_name_text_view"
         tools:ignore="HardcodedText"/>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/progress_constraint_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ProgressBar
+        android:id="@+id/counter_progress_bar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:background="@drawable/progress_bar_background"
+        android:progress="50"
+        android:progressDrawable="@drawable/progress_bar_circle"
+        android:rotation="90"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/counter_limit_text_view"
+        tools:ignore="HardcodedText"/>
 
-        <ProgressBar
-            android:id="@+id/counter_progress_bar"
-            style="?android:progressBarStyleHorizontal"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:background="@drawable/progress_bar_background"
-            android:progress="50"
-            android:progressDrawable="@drawable/progress_bar_circle"
-            android:rotation="90"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText"/>
+    <TextView
+        android:id="@+id/counter_count_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10"
+        android:textSize="80sp"
+        app:layout_constraintBottom_toBottomOf="@id/counter_progress_bar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/counter_progress_bar"
+        tools:ignore="HardcodedText"/>
 
-        <TextView
-            android:id="@+id/counter_count_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10"
-            android:textSize="80sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText"/>
+    <Button
+        android:id="@+id/counter_decrease_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-1"
+        app:layout_constraintLeft_toLeftOf="@id/counter_progress_bar"
+        app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
+        tools:ignore="HardcodedText"/>
 
-        <Button
-            android:id="@+id/counter_decrease_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-1"
-            app:layout_constraintLeft_toLeftOf="@id/counter_progress_bar"
-            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
-            tools:ignore="HardcodedText"/>
+    <Button
+        android:id="@+id/counter_increase_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:text="+1"
+        app:layout_constraintRight_toRightOf="@id/counter_progress_bar"
+        app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
+        tools:ignore="HardcodedText"/>
 
-        <Button
-            android:id="@+id/counter_increase_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:text="+1"
-            app:layout_constraintRight_toRightOf="@id/counter_progress_bar"
-            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
-            tools:ignore="HardcodedText"/>
-
-        <Button
-            android:id="@+id/counter_reset_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:text="@string/reset"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/counter_increase_button"
-            tools:ignore="HardcodedText"/>
-
-    </android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/counter_reset_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="@string/reset"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/counter_increase_button"
+        tools:ignore="HardcodedText"/>
 
 </android.support.constraint.ConstraintLayout>
