--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="list_item_vertical_margin">8dp</dimen>
     <dimen name="fab_first_menu_item">65dp</dimen>
     <dimen name="fab_second_menu_item">130dp</dimen>
+    <dimen name="material_button_min_width">64dp</dimen>
+    <dimen name="material_button_height">36dp</dimen>
+    <dimen name="material_button_horizontal_padding">16dp</dimen>
 </resources>
