handle counter group - WIP

--- a/app/src/main/res/layout/add_edit_counter_fragment.xml
+++ b/app/src/main/res/layout/add_edit_counter_fragment.xml
@@ -23,16 +23,17 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/count_layout"
+        android:id="@+id/limit_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/name_layout">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/count_text_input"
+            android:id="@+id/limit_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/count"/>
+            android:hint="@string/limit"
+            android:inputType="number"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -40,7 +41,7 @@
         android:id="@+id/note_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/count_layout">
+        app:layout_constraintTop_toBottomOf="@id/limit_layout">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/note_text_input"
@@ -82,28 +83,30 @@
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/select_group_text_view"/>
 
-    <ImageView
-        android:id="@+id/decrease_image"
+    <ImageButton
+        android:id="@+id/decrease_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:contentDescription="@string/ascending"
+        android:background="@android:color/transparent"
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
         app:layout_constraintBottom_toBottomOf="@id/direction_text_view"
         app:layout_constraintStart_toEndOf="@id/direction_text_view"
         app:srcCompat="@drawable/down_arrow"/>
 
-    <ImageView
-        android:id="@+id/increase_image"
+    <ImageButton
+        android:id="@+id/increase_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:contentDescription="@string/descending"
+        android:background="@android:color/transparent"
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
         app:layout_constraintBottom_toBottomOf="@id/direction_text_view"
-        app:layout_constraintStart_toEndOf="@id/decrease_image"
+        app:layout_constraintStart_toEndOf="@id/decrease_image_view"
         app:srcCompat="@drawable/up_arrow"/>
 
     <Button
