--- a/app/src/main/res/layout/counter_group_item.xml
+++ b/app/src/main/res/layout/counter_group_item.xml
@@ -8,7 +8,18 @@
     android:paddingBottom="@dimen/list_item_vertical_margin"
     android:background="@android:color/white"
     android:paddingTop="@dimen/list_item_vertical_margin"
+    android:paddingEnd="@dimen/list_item_horizontal_margin"
+    android:paddingStart="@dimen/list_item_horizontal_margin"
     android:minHeight="60dp">
+
+    <ImageView
+        android:id="@+id/folder_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_folder_black_24dp"
+        android:backgroundTint="@color/light_grey"
+        android:contentDescription="@string/folder"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/name_text_view"
@@ -16,8 +27,9 @@
         android:layout_height="wrap_content"
         android:text="Rappel 1 (10)"
         android:textSize="20sp"
+        android:layout_marginStart="10dp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toEndOf="@id/folder_image_view"
         tools:ignore="HardcodedText"/>
 
     <ImageView
