store dates in timestamp format

--- a/app/src/main/res/layout/folder_list_fragment.xml
+++ b/app/src/main/res/layout/folder_list_fragment.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:drawableTop="@drawable/ic_counter"
-        android:text="@string/no_counters"
+        android:text="@string/no_folders"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
