--- a/app/src/main/res/drawable/progress_bar_circle.xml
+++ b/app/src/main/res/drawable/progress_bar_circle.xml
@@ -5,10 +5,10 @@
        android:innerRadius="100dp"
        android:thickness="8dp"
        android:useLevel="true">
-    <gradient
-        android:angle="0"
-        android:endColor="@android:color/holo_green_light"
-        android:startColor="@android:color/transparent"
-        android:type="sweep"
-        android:useLevel="false"/>
+    <!--<gradient-->
+        <!--android:angle="0"-->
+        <!--android:endColor="@android:color/holo_green_light"-->
+        <!--android:startColor="@android:color/transparent"-->
+        <!--android:type="sweep"-->
+        <!--android:useLevel="false"/>-->
 </shape>
