--- a/app/src/main/res/drawable/progress_bar_background.xml
+++ b/app/src/main/res/drawable/progress_bar_background.xml
@@ -7,7 +7,7 @@
                android:shape="ring"
                android:thickness="1dp"
                android:useLevel="false">
-            <solid android:color="@android:color/holo_orange_light"/>
+            <solid android:color="@color/light_silver"/>
         </shape>
     </item>
     <item>
@@ -17,7 +17,7 @@
                android:shape="ring"
                android:thickness="1dp"
                android:useLevel="false">
-            <solid android:color="@android:color/holo_orange_light"/>
+            <solid android:color="@color/light_silver"/>
         </shape>
     </item>
 </layer-list>
